libs/modkit-macros/tests/ui/fail/ctor_string_literal.rs
use modkit_macros::module;

#[module(name="x", capabilities=[stateful], ctor="X::new()")]
pub struct X;

fn main() {}
